--- a/css/juego.css
+++ b/css/juego.css
@@ -104,7 +104,7 @@ h1#question{
 #barraDeProgreso{
     width: 20rem;
     height: 3rem;
-    border: 0.2rem solid rgb(11, 223, 36);
+    border: solid rgb(11, 223, 36);
     margin-top: 2rem;
     border-radius: 50px;
     overflow: hidden;
