--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,10 +42,10 @@ table {
 	border-spacing: 0;
 }
 /* MI CODIGO COMIENZA AQUÍ*/
-@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
 
 :root{
-    background-color: #2E3537;
+    background-image: url(/imagenes/871025.png);
 }
 
 *{
@@ -53,12 +53,15 @@ table {
     margin: 0;
     padding: 0;
     font-size: 62,5%;
-    font-family: 'Bungee', cursive;
+    font-family: 'Yusei Magic', sans-serif;
 }
 h1{
 	font-size: 6.4rem;
 	color: #fff;
 	margin-bottom: 5rem;
+	display: flex;
+	justify-content: center;
+	text-align: center;
 }
 
 
@@ -107,7 +110,7 @@ h2{
 	margin-bottom: 1rem;
 	text-decoration: none;
 	color: #000000;
-	background: linear-gradient(90deg, rgb(255, 102, 8)0%, rgb(255, 120, 37)100%);
+	background: linear-gradient(90deg, rgb(195, 10, 240)0%, rgb(111, 33, 130)100%);
 	border-radius: 10px;
 }
 
