--- a/css/estilos.css
+++ b/css/estilos.css
@@ -46,6 +46,8 @@ table {
 
 :root{
     background-image: url(/imagenes/Harry_Potter_y_la_piedra_filosofal-506964545-large.jpeg);
+	--neon-text-color: #f40;
+	--neon-border-color: #08f;
 }
 
 *{
@@ -56,7 +58,8 @@ table {
     font-family: 'Yusei Magic', sans-serif;
 }
 h1{
-	font-size: 6.4rem;
+	font-size: 5.4rem;
+	margin: 30px;
 	color: #fff;
 	display: flex;
 	justify-content: center;
@@ -105,22 +108,64 @@ h2{
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	text-align: center;
 	font-size: 2.4rem;
 	padding: 2rem 0;
-	width: 30rem;
-	text-align: center;
+	width: 25rem;
 	margin-bottom: 1rem;
 	text-decoration: none;
-	color: #000000;
+	color: #fff;
+	text-transform: uppercase;
+	animation: flicker 1.5s infinite alternate; 
 	background: linear-gradient(90deg, rgb(195, 10, 240)0%, rgb(176, 11, 216)100%);
-	border-radius: 10px;
+	border-radius: 20px;
 }
+juego::-moz-selection {
+	background-color: var(--neon-border-color);
+	color: var(--neon-text-color);
+  }
+  juego::selection {
+	background-color: var(--neon-border-color);
+	color: var(--neon-text-color);
+  }
+  juego:focus {
+	outline: none;
+  }
+/* Animate neon flicker */
+@keyframes flicker {
+    
+    0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+      
+        text-shadow:
+            -0.2rem -0.2rem 1rem #fff,
+            0.2rem 0.2rem 1rem #fff,
+            0 0 2rem var(--neon-text-color),
+            0 0 4rem var(--neon-text-color),
+            0 0 6rem var(--neon-text-color),
+            0 0 8rem var(--neon-text-color),
+            0 0 10rem var(--neon-text-color);
+        
+        box-shadow:
+            0 0 .5rem #fff,
+            inset 0 0 .5rem #fff,
+            0 0 2rem var(--neon-border-color),
+            inset 0 0 2rem var(--neon-border-color),
+            0 0 4rem var(--neon-border-color),
+            inset 0 0 4rem var(--neon-border-color);        
+    }
+    
+    20%, 24%, 55% {        
+        text-shadow: none;
+        box-shadow: none;
+    }    
+}
+	  
 
 .juego:hover{
 	cursor: pointer;
 	box-shadow: 0 0.4rem 1.4rem 0 rgb(255, 143, 75, 0.6);
-	transition: transform 150ms;
-	transform: scale(1.03);
+	transition: transform 125ms;
+	transform: scale(1.05);
 }
 
 .juego[disabled]:hover{
@@ -131,10 +176,11 @@ h2{
 
 #highscore-juego{
 	background: linear-gradient(90deg, rgb(255, 247, 9)0%, rgb(240, 221, 6))100%;
+	color: linear-gradient(90deg, rgb(255, 247, 9)0%, rgb(240, 221, 6))100%;
 }
 
+box-shadow: 0 0.4rem 1.4rem 0 rgba(255, 255, 0, 0.5);
 #highscore-juego:hover{
-	box-shadow: 0 0.4rem 1.4rem 0 rgba(255, 255, 0, 0.5);
 }
 
 fa-crown{
